--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,11 +1,13 @@
 # To get started with security, check out the documentation:
 # https://symfony.com/doc/current/security.html
 security:
+    encoders:
+        AppBundle\Entity\User: sha512
 
     # https://symfony.com/doc/current/security.html#b-configuring-how-users-are-loaded
     providers:
-        in_memory:
-            memory: ~
+        database_users:
+            entity: { class: UserBundle:User, property: username }
 
     firewalls:
         # disables authentication for assets and the profiler, adapt it according to your needs
@@ -14,7 +16,24 @@ security:
             security: false
 
         main:
-            anonymous: ~
+            pattern: ^/
+
+            anonymous: true
+
+            form_login:
+                check_path: security_login_check
+                login_path: security_login_form
+                csrf_provider: security.csrf.token_manager
+                default_target_path: user_dashboard
+                always_use_default_target_path: true
+            
+            logout:
+                path: security_logout
+                target: homepage
+
+    access_control:
+        - { path: ^/account/signup, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/account, roles: ROLE_USER }
             # activate different ways to authenticate
 
             # https://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
